feat: Fix installApp response code
